[package]
name = "rust-conflux-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
once_cell = "1"
parking_lot = { version = "0.12", features = ["arc_lock"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.36"

[features]
default = ["cfx"]
cfx = []
eth = []
